# xee

./: .gitignore  CI.md  COPYRIGHT  CREDITS.md  Cargo.toml  LICENSE-MIT  README.md  check  conformance.md  hacking.md  ideas.md  implementation_nodes.md  implementation_notes.md  release-plz.toml  xslt-plan.md
xee/: CHANGELOG.md  Cargo.toml  README.md  build.rs  default_ns.xml  example.xml  example2.xml  ns.xml
xee-interpreter/: CHANGELOG.md  Cargo.toml  README.md  buffer_data.postcard
xee-interpreter/src/: error.rs  lib.rs  occurrence.rs  span.rs
xee-interpreter/src/atomic/: atomic_core.rs  cast.rs  cast_datetime.rs  cast_numeric.rs  cast_string.rs  compare.rs  datetime.rs  map_key.rs  mod.rs  op_div.rs  op_eq.rs  op_ge.rs  op_gt.rs  op_idiv.rs  op_le.rs  op_lt.rs  op_mod.rs  op_multiply.rs  op_ne.rs  op_subtract.rs  round.rs  types.rs  xpath_repr.rs
xee-interpreter/src/context/: dynamic_context.rs  dynamic_context_builder.rs  mod.rs  static_context.rs  static_context_builder.rs
xee-interpreter/src/declaration/: decl.rs  globalvar.rs  mod.rs
xee-interpreter/src/function/: array.rs  function_core.rs  inline_function.rs  map.rs  mod.rs  signature.rs  static_function.rs
xee-interpreter/src/interpreter/: instruction.rs  interpret.rs  mod.rs  program.rs  runnable.rs  state.rs
xee-interpreter/src/neovalue/: compare.rs  comparison.rs  core.rs  creation.rs  item.rs  iter.rs  matching.rs  mod.rs  normalization.rs  serialization.rs  stack.rs  traits.rs  variant.rs
xee-interpreter/src/pattern/: lookup.rs  mod.rs  mode.rs  pattern_core.rs  pattern_core2.rs  pattern_lookup.rs
xee-interpreter/src/sequence/: compare.rs  comparison.rs  conversion.rs  core.rs  creation.rs  item.rs  iter.rs  (+10 more)
xee-ir/: CHANGELOG.md  Cargo.toml  README.md
xee-ir/src/: binding.rs  builder.rs  compile.rs  constant_fold.rs  declaration_compiler.rs  function_compiler.rs  ir.rs  ir_interpret.rs  lib.rs  scope.rs  variables.rs
xee-ir/tests/: test_xml_ir.rs
xee-name/: CHANGELOG.md  Cargo.toml  README.md
xee-name/src/: lib.rs  name.rs  namespaces.rs  variable_names.rs
xee-php/: Cargo.toml  xee-php.stubs.php  xee-xpath-php.stubs.php
xee-php/php/: test.php
xee-php/src/: atomic.rs  core.rs  lib.rs
xee-qt/: Cargo.toml  README.md
xee-qt/src/: assert.rs  cli.rs  environment.rs  error.rs  filter.rs  lib.rs  load.rs  main.rs  outcome.rs  path.rs  qt.rs  run.rs  serialize.rs  testing.rs  ui.rs
xee-schema-type/: CHANGELOG.md  Cargo.toml  README.md
xee-schema-type/src/: lib.rs  xs.rs
xee-schematype/: Cargo.toml
xee-schematype/src/: lib.rs  types_core.rs
xee-testrunner/: CHANGELOG.md  Cargo.toml  README.md
xee-testrunner/src/: assert.rs  catalog.rs  cli.rs  collection.rs  dependency.rs  environment.rs  error.rs  filter.rs  hashmap.rs  language.rs  lib.rs  load.rs  main.rs  metadata.rs  ns.rs  outcome.rs  outcomes.rs  paths.rs  renderer.rs  runcontext.rs  source.rs  testcase.rs  testset.rs  xpath_environment.rs  xpath_testcase.rs  xslt_environment.rs
xee-xpath/: CHANGELOG.md  Cargo.toml  README.md  buffer_data.postcard
xee-xpath-ast/: CHANGELOG.md  Cargo.toml  README.md
xee-xpath-ast/src/: ast.rs  context.rs  error.rs  lexer.rs  lib.rs  namespaces.rs  operator.rs  parser.rs  pattern.rs  pattern_transform.rs  span.rs
xee-xpath-compiler/: CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md
xee-xpath-compiler/examples/: high_level.rs
xee-xpath-compiler/src/: ast_ir.rs  compile.rs  lib.rs  run.rs  span.rs
xee-xpath-compiler/tests/: arithmetic.rs  bootstrap.rs  xpath.rs
xee-xpath-lexer/: CHANGELOG.md  Cargo.toml  LICENSE-APACHE  README.md
xee-xpath-lexer/src/: collapse_whitespace.rs  combiner.rs  comment.rs  delimination.rs  delimination2.rs  explicit_whitespace.rs  lexer.rs  lib.rs  prefixed_qname.rs  reserved.rs  symbol_type.rs
xee-xpath-lexer/tests/: test_lexer.rs
xee-xpath-load/: CHANGELOG.md  Cargo.toml  README.md
xee-xpath-load/src/: lib.rs  load.rs  query.rs
xee-xpath-macros/: CHANGELOG.md  Cargo.toml  README.md
xee-xpath-macros/src/: convert.rs  convert2.rs  error.rs  lib.rs  parse.rs  wrapper.rs
xee-xpath-outer/: Cargo.toml
xee-xpath-outer/src/: lib.rs  query.rs  run.rs
xee-xpath-outer/tests/: arithmetic.rs  bootstrap.rs  xpath.rs
xee-xpath-type/: CHANGELOG.md  Cargo.toml  README.md
xee-xpath-type/src/: ast.rs  lib.rs  sequence_type.rs
xee-xpath/benches/: xpath.rs
xee-xpath/examples/: element_with_attribute.rs  high_level.rs  large_map.rs  namespaces-and-functions.rs  string.rs
xee-xpath/src/: annotation.rs  ast.rs  ast_interpret.rs  ast_ir.rs  atomic.rs  builder.rs  comparison.rs  compile.rs  context.rs  data.rs  document.rs  documents.rs  dynamic_context.rs  error.rs  func.rs  function.rs  high_level.rs  instruction.rs  interpret.rs  interpret2.rs  interpreter.rs  ir.rs  ir_interpret.rs  item.rs  itemable.rs  iter.rs  lib.rs  name.rs  occurrence.rs  op.rs  op2.rs  operator.rs  output.rs  parse.rs  parse_ast.rs  queries.rs  query.rs  query2.rs  rename.rs  run.rs  (+15 more)
xee-xpath/tests/: api.rs  arithmetic.rs  bootstrap.rs  qt3.rs  query.rs  span.rs  xpath.rs  xpath_fn.rs
xee-xslt/: Cargo.toml
xee-xslt-ast/: CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md
xee-xslt-ast/src/: ast_core.rs  attributes.rs  children_parser.rs  combinator.rs  combinator2.rs  content.rs  context.rs  element.rs  element_namespaces.rs  element_parser.rs  error.rs  instruction.rs  lexer.rs  lib.rs  name.rs  names.rs  parse.rs  parse2.rs  parse3.rs  parse4.rs  preprocess.rs  state.rs  staticeval.rs  tokenize.rs  value_template.rs  visitor.rs  whitespace.rs
xee-xslt-ast/tests/: snapshot_tests.rs
xee-xslt-compiler/: CHANGELOG.md  Cargo.toml  README.md
xee-xslt-compiler/src/: ast_ir.rs  default_declarations.rs  lib.rs  run.rs
xee-xslt-compiler/tests/: test_xslt.rs
xee-xslt/src/: ast_ir.rs  lib.rs  priority.rs  run.rs
xee-xslt/tests/: test_xslt.rs
xee/example-docs/: example-broken.xml  example-broken2.xml  example-broken3.xml  example-broken4.xml
xee/src/: common.rs  error.rs  format.rs  indent.rs  load_xml.rs  main.rs  repl.rs  repl_cmd.rs  xpath.rs  xslt.rs
(+1760 files in other folders)
