[workspace]
members = [
  "xee",
  "xee-name",
  "xee-schema-type",
  "xee-xpath-type",
  "xee-interpreter",
  "xee-ir",
  "xee-xpath-ast",
  "xee-xpath-macros",
  "xee-xpath",
  "xee-xpath-load",
  "xee-xslt-ast",
  "xee-testrunner",
  "xee-xslt",
]
# even if all crates are set to edition 2021, we still need to force the
# resolver to 2
# https://github.com/gfx-rs/wgpu/issues/2356#issuecomment-1005134986
resolver = "2"

[workspace.dependencies]
anyhow = "1.0.80"
xot = "0.23.0"
ahash = "0.8.6"
strum = "0.25"
strum_macros = "0.25"
clap = "4.2.7"
ibig = "0.3.6"
ordered-float = "3.7.0"
rust_decimal = "1.30.0"
rust_decimal_macros = "1.29.1"
chumsky = "1.0.0-alpha.6"
icu = "1.2.0"
serde = "1"
chrono = "0.4.30"
blanket = "0.2.0"
thiserror = "1.0.40"

[profile.test.package.xot]
opt-level = 3
