[package]
name = "xee-interpreter"
version = "0.1.0"
edition = "2021"
authors = ["The Xee Project Developers"]
keywords = ["xml", "xpath"]
license = "MIT OR Apache-2.0"
description = "Interpreter for XPath and XSLT"
repository = "http://github.com/Paligo/xee"
readme = "README.md"
documentation = "https://docs.rs/xee-interpreter"
homepage = "https://github.com/Paligo/xee"

[features]
serde = [
    "dep:serde",
    "ibig/serde",
    "ordered-float/serde",
    "xee-schema-type/serde",
    "xee-xpath-type/serde",
    "xee-xpath-ast/serde",
    "chumsky/serde",
    "xot/serde",
]

[dependencies]
xee-xpath-ast = { path = "../xee-xpath-ast" }
ahash = { workspace = true }
arrayvec = "0.7.2"
chumsky = { workspace = true }
iri-string = { workspace = true }
next-gen = "0.1.1"
strum = { workspace = true }
strum_macros = { workspace = true }
num = "0.4.1"
num-derive = "0.4.1"
num-traits = "0.2.17"
ordered-float = { workspace = true }
rust_decimal = { workspace = true }
ibig = { workspace = true }
thiserror = { workspace = true }
xot = { workspace = true }
xee-xpath-macros = { path = "../xee-xpath-macros" }
xee-schema-type = { path = "../xee-schema-type" }
xee-xpath-type = { path = "../xee-xpath-type" }
xee-name = { path = "../xee-name" }
lexical = { version = "6.1.1", features = ["format"] }
hex = "0.4.3"
base64 = "0.21.2"
chrono = { workspace = true }
icu = { workspace = true }
icu_provider_adapters = { workspace = true }
serde = { workspace = true, features = ["derive"], optional = true }
regexml = { workspace = true }
percent-encoding = "2.3.1"
json = { workspace = true }
v_jsonescape = "0.7.8"
static_assertions = "1.1.0"

[dev-dependencies]
insta = { version = "1.29.0", features = ["yaml", "glob"] }
rstest = "0.16.0"
test-generator = "0.3.0"
xot = { workspace = true, features = ["proptest"] }
rust_decimal_macros = "1.29.1"
