[package]
name = "xee-interpreter"
version = "0.1.0"
edition = "2021"
authors = ["The Xee Project Developers"]
keywords = ["xml", "xpath"]
license = "MIT"
description = "Interpreter for XPath and XSLT"
repository = "http://github.com/Paligo/xee"
readme = "README.md"
documentation = "https://docs.rs/xee-interpreter"
homepage = "https://github.com/Paligo/xee"

[features]
serde = [
    "dep:serde",
    "ibig/serde",
    "ordered-float/serde",
    "xee-schema-type/serde",
    "xee-xpath-type/serde",
    "xee-xpath-ast/serde",
    "chumsky/serde",
    "xot/serde",
]

[dependencies]
xee-xpath-ast = { path = "../xee-xpath-ast" }
ahash = { workspace = true }
arrayvec = "0.7.6"
chumsky = { workspace = true }
iri-string = { workspace = true }
next-gen = "0.1.1"
strum = { workspace = true }
strum_macros = { workspace = true }
num = "0.4.3"
num-derive = "0.4.2"
num-traits = "0.2.19"
ordered-float = { workspace = true }
rust_decimal = { workspace = true }
ibig = { workspace = true }
thiserror = { workspace = true }
xot = { workspace = true }
xee-xpath-macros = { path = "../xee-xpath-macros" }
xee-schema-type = { path = "../xee-schema-type" }
xee-xpath-type = { path = "../xee-xpath-type" }
xee-name = { path = "../xee-name" }
lexical = { version = "7.0.4", features = ["format"] }
hex = "0.4.3"
base64 = "0.22.1"
chrono = { workspace = true }
icu = { workspace = true }
icu_provider_adapters = { workspace = true }
serde = { workspace = true, features = ["derive"], optional = true }
regexml = { workspace = true }
percent-encoding = "2.3.1"
json = { workspace = true }
v_jsonescape = "0.7.8"
static_assertions = "1.1.0"

[dev-dependencies]
insta = { workspace = true, features = ["yaml", "glob"] }
test-generator = "0.3.1"
xot = { workspace = true, features = ["proptest"] }
rust_decimal_macros = { workspace = true }
