[package]
name = "xee-ir"
version = "0.1.0"
edition = "2021"
authors = ["Martijn Faassen <faassen@startifact.com>"]
keywords = ["xml", "xpath", "xslt"]
license = "Apache-2.0"
description = "Xee intermediate representation and compilation to bytecode"
repository = "http://github.com/Paligo/xee"
readme = "README.md"
documentation = "https://docs.rs/xee-ir"
homepage = "https://github.com/Paligo/xee"

[dependencies]
ahash = { workspace = true }
ordered-float = "3.6.0"
rust_decimal = "1.30.0"
xot = { workspace = true }
xee-xpath-ast = { path = "../xee-xpath-ast" }
xee-schema-type = { path = "../xee-schema-type" }
xee-interpreter = { path = "../xee-interpreter" }
ibig = "0.3.6"
