[package]
name = "xee-ir"
version = "0.1.0"
edition = "2021"
authors = ["The Xee Project Developers"]
keywords = ["xml", "xpath", "xslt"]
categories = ["text-processing", "compilers"]
license = "MIT"
description = "Xee intermediate representation and compilation to bytecode"
repository = "http://github.com/Paligo/xee"
readme = "README.md"
documentation = "https://docs.rs/xee-ir"
homepage = "https://github.com/Paligo/xee"

[dependencies]
ahash = { workspace = true }
ordered-float = { workspace = true }
rust_decimal = { workspace = true }
ibig = { workspace = true }
xot = { workspace = true }
xee-xpath-ast = { path = "../xee-xpath-ast" }
xee-schema-type = { path = "../xee-schema-type" }
xee-interpreter = { path = "../xee-interpreter" }

[dev-dependencies]
insta = { workspace = true, features = ["yaml", "glob"] }
