[package]
name = "xee-ir"
version = "0.1.1"
edition = "2021"
authors = ["The Xee Project Developers"]
keywords = ["xml", "xpath", "xslt"]
categories = ["text-processing", "compilers"]
license = "MIT"
description = "Xee intermediate representation and compilation to bytecode"
repository = "http://github.com/Paligo/xee"
readme = "README.md"
documentation = "https://docs.rs/xee-ir"
homepage = "https://github.com/Paligo/xee"

[dependencies]
xee-xpath-ast = { path = "../xee-xpath-ast", version = "0.1.1" }
xee-schema-type = { path = "../xee-schema-type", version = "0.1.2" }
xee-interpreter = { path = "../xee-interpreter", version = "0.1.1" }
ahash = { workspace = true }
ordered-float = { workspace = true }
rust_decimal = { workspace = true }
ibig = { workspace = true }
xot = { workspace = true }


[dev-dependencies]
insta = { workspace = true, features = ["yaml", "glob"] }
