[package]
name = "xee-qt"
version = "0.1.0"
edition = "2021"
authors = ["Martijn Faassen <faassen@startifact.com>"]
keywords = ["xml", "xpath", "testing"]
license = "Apache-2.0"
description = "Conformance testing for xee-xpath"
repository = "http://github.com/Paligo/xee"
readme = "README.md"
documentation = "https://docs.rs/xee-qt"
homepage = "https://github.com/Paligo/xee"

[dependencies]
thiserror = "1.0.40"
xot = { workspace = true }
xee-xpath = { path = "../xee-xpath" }
miette = { workspace = true, features = ["fancy"] }
fxhash = "0.2.1"
indexmap = "1.9.3"
clap = { workspace = true, features = ["derive"] }
crossterm = "0.26.1"
derive_builder = "0.12.0"
globset = "0.4.10"
chrono = { workspace = true }
ibig = { workspace = true }

[dev-dependencies]
insta = { version = "1.29.0", features = ["yaml", "glob"] }
tempfile = "3.5.0"
