[package]
name = "xee-schema-type"
version = "0.1.0"
edition = "2021"
authors = ["Martijn Faassen <faassen@startifact.com>"]
keywords = ["xml", "xpath"]
license = "Apache-2.0"
description = "XML Schema type information"
repository = "http://github.com/Paligo/xee"
readme = "README.md"
documentation = "https://docs.rs/xee-schema-type"
homepage = "https://github.com/Paligo/xee"

[dependencies]
ahash = { workspace = true }
serde = { workspace = true, features = ["derive"], optional = true }

[dev-dependencies]
insta = { version = "1.29.0", features = ["yaml", "glob"] }

[features]
serde = ["dep:serde"]
