[package]
name = "xee-testrunner"
version = "0.1.2"
edition = "2021"
authors = ["The Xee Project Developers"]
keywords = ["xml", "xpath", "xslt", "testing"]
license = "MIT"
description = "Conformance testing for Xee's XPath and XSLT implementations"
repository = "http://github.com/Paligo/xee"
readme = "README.md"
documentation = "https://docs.rs/xee-testrunner"
homepage = "https://github.com/Paligo/xee"

[dependencies]
xee-xpath-load = { path = "../xee-xpath-load", version = "0.1.2" }
xee-xpath = { path = "../xee-xpath", version = "0.1.2" }
xee-xslt-compiler = { path = "../xee-xslt-compiler", version = "0.1.2" }
xee-name = { path = "../xee-name", version = "0.1.1" }
anyhow = { workspace = true }
thiserror = { workspace = true }
ahash = { workspace = true }
xot = { workspace = true }
fxhash = "0.2.1"
indexmap = "2.8.0"
clap = { workspace = true, features = ["derive"] }
crossterm = "0.28.1"
globset = "0.4.16"
chrono = { workspace = true }
ibig = { workspace = true }
iri-string = { workspace = true }

[dev-dependencies]
insta = { workspace = true, features = ["yaml", "glob"] }
tempfile = "3.19.0"
