[package]
name = "xee-xpath-ast"
version = "0.1.0"
edition = "2021"
authors = ["Martijn Faassen <faassen@startifact.com>"]
keywords = ["xml", "xpath"]
license = "Apache-2.0"
description = "XPath parser and AST implementation"
repository = "http://github.com/Paligo/xee"
readme = "README.md"
documentation = "https://docs.rs/xee-xpath"
homepage = "https://github.com/Paligo/xee-xpath"

[features]
serde = [
    "dep:serde",
    "ibig/serde",
    "ordered-float/serde",
    "xee-schema-type/serde",
    "chumsky/serde",
]

[dependencies]
ahash = { workspace = true }
chumsky = { workspace = true }
logos = "0.13.0"
blanket = { workspace = true }
thiserror = "1.0.40"
ordered-float = { workspace = true }
ibig = { workspace = true }
rust_decimal = { workspace = true }
xot = { workspace = true }
xee-schema-type = { path = "../xee-schema-type" }
serde = { workspace = true, features = ["derive"], optional = true }

[dev-dependencies]
# we want to depend on serde feature during tests
xee-xpath-ast = { path = ".", features = ["serde"] }
insta = { version = "1.29.0", features = ["ron", "glob"] }
xot = { workspace = true, features = ["proptest"] }
rust_decimal_macros = "1.29.1"
ron = "0.8.0"
