[package]
name = "xee-xpath-ast"
version = "0.1.0"
edition = "2021"
authors = ["Martijn Faassen <faassen@startifact.com>"]
keywords = ["xml", "xpath"]
license = "Apache-2.0"
description = "XPath parser and AST implementation"
repository = "http://github.com/Paligo/xee"
readme = "README.md"
documentation = "https://docs.rs/xee-xpath-ast"
homepage = "https://github.com/Paligo/xee"

[features]
serde = [
    "dep:serde",
    "ibig/serde",
    "ordered-float/serde",
    "chumsky/serde",
    "xee-schema-type/serde",
    "xee-xpath-type/serde",
    "xee-name/serde",
    "xot/serde",
]

[dependencies]
ahash = { workspace = true }
chumsky = { workspace = true }
logos = "0.13.0"
blanket = { workspace = true }
ordered-float = { workspace = true }
ibig = { workspace = true }
rust_decimal = { workspace = true }
thiserror = { workspace = true }
xot = { workspace = true }
xee-schema-type = { path = "../xee-schema-type" }
xee-name = { path = "../xee-name" }
serde = { workspace = true, features = ["derive"], optional = true }
xee-xpath-type = { path = "../xee-xpath-type" }

[dev-dependencies]
# we want to depend on serde feature during tests
xee-xpath-ast = { path = ".", features = ["serde"] }
insta = { version = "1.29.0", features = ["ron", "glob"] }
xot = { workspace = true, features = ["proptest"] }
rust_decimal_macros = "1.29.1"
ron = "0.8.0"
