[package]
name = "xee-xpath-compiler"
version = "0.1.1"
edition = "2021"
authors = ["The Xee Project Developers"]
keywords = ["xml", "xpath"]
license = "MIT"
description = "XPath 3.1 compiler of AST to Xee IR"
repository = "http://github.com/Paligo/xee"
readme = "README.md"
documentation = "https://docs.rs/xee-xpath"
homepage = "https://github.com/Paligo/xee"

[features]
serde = ["xee-xpath-ast/serde", "xee-interpreter/serde"]

[dependencies]
ahash = { workspace = true }
ordered-float = { workspace = true }
rust_decimal = { workspace = true }
ibig = { workspace = true }
thiserror = { workspace = true }
xot = { workspace = true }
xee-xpath-ast = { path = "../xee-xpath-ast" }
xee-schema-type = { path = "../xee-schema-type" }
xee-interpreter = { path = "../xee-interpreter" }
xee-ir = { path = "../xee-ir" }
iri-string = { workspace = true }

[dev-dependencies]
insta = { workspace = true, features = ["yaml", "glob"] }
rust_decimal_macros = { workspace = true }
