[package]
name = "xee-xpath-compiler"
version = "0.1.1"
edition = "2021"
authors = ["The Xee Project Developers"]
keywords = ["xml", "xpath"]
license = "MIT"
description = "XPath 3.1 compiler of AST to Xee IR"
repository = "http://github.com/Paligo/xee"
readme = "README.md"
documentation = "https://docs.rs/xee-xpath"
homepage = "https://github.com/Paligo/xee"

[features]
serde = ["xee-xpath-ast/serde", "xee-interpreter/serde"]

[dependencies]
xee-xpath-ast = { path = "../xee-xpath-ast", version = "0.1.1" }
xee-schema-type = { path = "../xee-schema-type", version = "0.1.2" }
xee-interpreter = { path = "../xee-interpreter", version = "0.1.1" }
xee-ir = { path = "../xee-ir" }
ahash = { workspace = true }
ordered-float = { workspace = true }
rust_decimal = { workspace = true }
ibig = { workspace = true }
thiserror = { workspace = true }
xot = { workspace = true }
iri-string = { workspace = true }

[dev-dependencies]
insta = { workspace = true, features = ["yaml", "glob"] }
rust_decimal_macros = { workspace = true }
