[package]
name = "xee-xpath-load"
version = "0.1.2"
edition = "2021"
authors = ["The Xee Project Developers"]
keywords = ["xml", "xpath"]
license = "MIT"
description = "Load XML into structs using XPath"
repository = "http://github.com/Paligo/xee"
readme = "README.md"
documentation = "https://docs.rs/xee-xpath-load"
homepage = "https://github.com/Paligo/xee"


[dependencies]
xee-xpath-compiler = { path = "../xee-xpath-compiler", version = "0.1.2" }
xee-xpath = { path = "../xee-xpath", version = "0.1.2" }
thiserror = { workspace = true }
xot = { workspace = true }
ibig = { workspace = true }
rust_decimal = { workspace = true }
anyhow = { workspace = true }
iri-string = { workspace = true }

[dev-dependencies]
insta = { workspace = true, features = ["yaml", "glob"] }
