[package]
name = "xee-xpath-macros"
version = "0.1.0"
description = "Proc macros for xee-interpreter function library"
authors = ["Martijn Faassen <faassen@startifact.com>"]
edition = "2021"
keywords = ["xml", "xpath"]
license = "Apache-2.0"
repository = "http://github.com/Paligo/xee"
readme = "README.md"
documentation = "https://docs.rs/xee-xpath-macros"
homepage = "https://github.com/Paligo/xee"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = { version = "1", default-features = false }
quote = "1"
syn = { version = "2", features = ["full", "extra-traits"] }
xee-xpath-ast = { path = "../xee-xpath-ast" }
xee-schema-type = { path = "../xee-schema-type" }
xot = { workspace = true }

[dev-dependencies]
serde = { workspace = true, features = ["derive"] }
insta = { version = "1.29.0", features = ["yaml", "glob"] }
xot = { workspace = true, features = ["serde"] }
