[package]
name = "xee-xpath-outer"
version = "0.1.0"
edition = "2021"
authors = ["Martijn Faassen <faassen@startifact.com>"]
keywords = ["xml", "xpath"]
license = "Apache-2.0"
description = "XPath implementation"
repository = "http://github.com/Paligo/xee"
readme = "README.md"
documentation = "https://docs.rs/xee-xpath"
homepage = "https://github.com/Paligo/xee-xpath"


[dependencies]
ahash = { workspace = true }
ordered-float = "3.6.0"
rust_decimal = "1.30.0"
thiserror = "1.0.40"
xot = { workspace = true }
xee-xpath-ast = { path = "../xee-xpath-ast" }
xee-schema-type = { path = "../xee-schema-type" }
xee-xpath = { path = "../xee-xpath" }
ibig = "0.3.6"

[dev-dependencies]
insta = { version = "1.29.0", features = ["yaml", "glob"] }
rstest = "0.16.0"
test-generator = "0.3.0"
xot = { workspace = true, features = ["proptest"] }
rust_decimal_macros = "1.29.1"
