[package]
name = "xee-xpath"
version = "0.1.2"
edition = "2021"
authors = ["The Xee Project Developers"]
keywords = ["xml", "xpath"]
categories = ["text-processing", "compilers"]
license = "MIT"
description = "XPath 3.1 library API"
repository = "http://github.com/Paligo/xee"
readme = "README.md"
documentation = "https://docs.rs/xee-xpath"
homepage = "https://github.com/Paligo/xee"

[features]
serde = ["xee-xpath-ast/serde", "xee-interpreter/serde"]

[dependencies]
xee-xpath-compiler = { path = "../xee-xpath-compiler", version = "0.1.2" }
xee-xpath-ast = { path = "../xee-xpath-ast", version = "0.1.2" }
xee-schema-type = { path = "../xee-schema-type", version = "0.1.2" }
xee-interpreter = { path = "../xee-interpreter", version = "0.1.3" }
xee-ir = { path = "../xee-ir", version = "0.1.2" }
chrono = { workspace = true }
ahash = { workspace = true }
ordered-float = { workspace = true }
rust_decimal = { workspace = true }
ibig = { workspace = true }
thiserror = { workspace = true }
xot = { workspace = true }
iri-string = { workspace = true }

[dev-dependencies]
insta = { workspace = true, features = ["yaml", "glob"] }
rust_decimal_macros = { workspace = true }
divan = "0.1.17"

[[bench]]
name = "xpath"
harness = false
