[package]
name = "xee-xslt-ast"
version = "0.1.0"
edition = "2021"
authors = [
    "Martijn Faassen <faassen@startifact.com>",
    "Nalle Rooth <nalle.rooth@paligo.net>",
]
keywords = ["xml", "xslt"]
license = "Apache-2.0"
description = "XSLT parser and AST implementation"
repository = "http://github.com/Paligo/xee"
readme = "README.md"
documentation = "https://docs.rs/xee-xslt"
homepage = "https://github.com/Paligo/xee-xslt"

[features]
serde = ["dep:serde", "xee-xpath-ast/serde", "xee-interpreter/serde"]

[dependencies]
ahash = { workspace = true }
xee-xpath-ast = { path = "../xee-xpath-ast" }
xee-interpreter = { path = "../xee-interpreter" }
xee-xpath-outer = { path = "../xee-xpath-outer" }
thiserror = "1.0.40"
xot = { workspace = true }
serde = { workspace = true, features = ["derive"], optional = true }
strum = "0.25"
strum_macros = "0.25"
blanket = { workspace = true }

[dev-dependencies]
# we want to depend on serde feature during tests
xee-xslt-ast = { path = ".", features = ["serde"] }
insta = { version = "1.29.0", features = ["ron", "glob"] }
xot = { workspace = true, features = ["proptest"] }
ron = "0.8.0"
