[package]
name = "xee-xslt-ast"
version = "0.1.0"
edition = "2021"
authors = [
    "Martijn Faassen <faassen@startifact.com>",
    "Nalle Rooth <nalle.rooth@paligo.net>",
]
keywords = ["xml", "xslt"]
license = "Apache-2.0"
description = "XSLT parser and AST implementation"
repository = "http://github.com/Paligo/xee"
readme = "README.md"
documentation = "https://docs.rs/xee-xslt"
homepage = "https://github.com/Paligo/xee-xslt"

[features]
serde = ["dep:serde", "xee-xpath-ast/serde", "xee-xpath/serde"]

[dependencies]
ahash = { workspace = true }
xee-xpath-ast = { path = "../xee-xpath-ast" }
xee-xpath = { path = "../xee-xpath" }
xee-name = { path = "../xee-name" }
thiserror = { workspace = true }
xot = { workspace = true }
serde = { workspace = true, features = ["derive"], optional = true }
strum = { workspace = true }
strum_macros = { workspace = true }
blanket = { workspace = true }

[dev-dependencies]
# we want to depend on serde feature during tests
xee-xslt-ast = { path = ".", features = ["serde"] }
insta = { version = "1.29.0", features = ["ron", "glob"] }
xot = { workspace = true, features = ["proptest"] }
ron = "0.8.0"
